--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "restaurant-page",
   "version": "1.0.0",
+  "repository" : {
+    "url":"git+https://github.com/Barrymoonshine/restaurant-page.git"
+  }
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode=development",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d dist"
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Barrymoonshine/restaurant-page.git"
   },
   "keywords": [],
   "author": "",
